tests/baselines/reference/recursiveBaseCheck6.errors.txt
tests/cases/compiler/recursiveBaseCheck6.ts(1,7): error TS2310: Type 'S18<A>' recursively references itself as a base type.
tests/cases/compiler/recursiveBaseCheck6.ts(2,13): error TS2339: Property 'blah' does not exist on type 'S18<{}>'.


==== tests/cases/compiler/recursiveBaseCheck6.ts (2 errors) ====
    class S18<A> extends S18<{ S19: A; }>{ }
          ~~~
!!! error TS2310: Type 'S18<A>' recursively references itself as a base type.
    (new S18()).blah;
                ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'S18<{}>'.